kube-deployment/traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
  - name: web
    protocol: HTTP
    port: 80
    hostname: "*.osuk8s.site"
    allowedRoutes:
      namespaces:
        from: All
  - name: websecure
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    hostname: "*.osuk8s.site"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: osuk8s-site-tls
