kube-deployment/simple-golang-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    protocol: HTTP
    port: 10080
    hostname:
    - www.osuk8s.site
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-golang-route
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: simple-golang
      port: 80
